# stamps

./: .gitignore  Borbon_stamp.stl  estampo.toml  generate_stamp.ipynb  generate_stamp.py  pyproject.toml
.github/workflows/: build-stamp.yml
estampo_output/: plate_1.gcode  plate_sliced.gcode.3mf  result.json  stats.json
profiles/orca/filament/: Generic PETG-CF @base.json  Generic PLA.json
profiles/orca/machine/: Bambu Lab P1S 0.4 nozzle.json
profiles/orca/process/: 0.08mm Extra Fine @BBL X1C.json
